# pkg/api/api.go
@@ -1,16 +1,14 @@
-package server
+package api
 
 import (
-	"context"
 	"flag"
 	"fmt"
 	"log"
 	"time"
 
-	_ "urlshortener/docs"
-	"urlshortener/pkg/proto/apipb"
-	"urlshortener/pkg/proto/cachepb"
-	"urlshortener/pkg/proto/urlspb"
+	_ "urlshortener/pkg/docs"
+	"urlshortener/pkg/protobuf/cachepb"
+	"urlshortener/pkg/protobuf/urlspb"
 
 	"github.com/gin-gonic/gin"
 	"google.golang.org/grpc"
@@ -19,12 +17,6 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
-
-type Server struct {
-	urlClient   urlspb.UrlsClient
-	cacheClient cachepb.CacheClient
-	router      *gin.Engine
-}
 
 var (
 	port       = flag.Int("port", 8080, "The server port")
@@ -48,10 +40,6 @@ var (
 // @query.collection.format multi
 // @schemes                 http
 
-// @securityDefinitions.apiKey JWT_AUTH
-// @in                         header
-// @name                       Authorization
-// @description:               'Authorization header: "Bearer [token]"'
 func RunService() {
 
 	flag.Parse()
@@ -59,55 +47,40 @@ func RunService() {
 	var err error
 	urlConn, err := grpc.Dial(*urls_addr, grpc.WithTransportCredentials(insecure.NewCredentials()))
 	if err != nil {
-		log.Fatalf("did not connect: %v", err)
+		log.Fatalf("failed to connect: %v", err)
 	}
 	defer urlConn.Close()
 
 	cacheConn, err := grpc.Dial(*cache_addr, grpc.WithTransportCredentials(insecure.NewCredentials()))
 	if err != nil {
-		log.Fatalf("did not connect: %v", err)
+		log.Fatalf("failed to connect: %v", err)
 	}
 	defer cacheConn.Close()
 
-	server := &Server{
-		urlClient:   urlspb.NewUrlsClient(urlConn),
-		cacheClient: cachepb.NewCacheClient(cacheConn),
-		router:      gin.Default(),
+	server := &httpServer{
+		urlClient:      urlspb.NewUrlsClient(urlConn),
+		cacheClient:    cachepb.NewCacheClient(cacheConn),
+		router:         gin.Default(),
+		trustedProxies: []string{"127.0.0.1"},
 	}
-	server.pingServices()
 	server.registerEndpoints()
+	server.registerTrustedProxies()
+	go server.pingServices()
+	stop := server.schedulePeriodicTask(server.pingServices, time.Minute)
+	defer stop()
 
 	log.Println("Starting server on port", *port)
 	log.Printf("Swagger docs available at http://localhost:%d/docs/index.html\n", *port)
 
 	if err := server.router.Run(fmt.Sprintf(":%d", *port)); err != nil {
-		log.Fatalf("failed to run server: %v", err)
+		log.Fatalf("failed to serve: %v", err)
 	}
 }
 
-func (server *Server) registerEndpoints() {
+func (server *httpServer) registerEndpoints() {
 	server.router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	server.router.GET("/ping", server.Ping)
 	server.router.Any("/:urlId", server.RedirectToUrl)
 	server.router.GET("/url/:urlId", server.GetUrl)
 	server.router.POST("/url", server.PostUrl)
-}
-
-func (server *Server) pingServices() {
-	c, cancel := makeCtx()
-	defer cancel()
-	_, err := server.urlClient.Ping(c, &apipb.PingRequest{})
-	if err != nil {
-		log.Fatal("failed to ping url service: ", err)
-	}
-	c, cancel = makeCtx()
-	defer cancel()
-	_, err = server.cacheClient.Ping(c, &apipb.PingRequest{})
-	if err != nil {
-		log.Fatal("failed to ping cache service: ", err)
-	}
-}
-
-func makeCtx() (context.Context, context.CancelFunc) {
-	return context.WithTimeout(context.Background(), time.Second)
 }
